# TensorflowDemo

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/tenserflowdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: logcat.h  native-gw.cpp  native-gw.h
app/src/main/java/com/example/tenserflowdemo/: DetectResult.java  MainActivity.java  NativeLoad.java
app/src/main/java/com/example/tenserflowdemo/utils/: AssetUtils.java  WindowSizeBean.java  WindowSizeUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/example/tenserflowdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary430/: build.gradle
openCVLibrary430/src/main/: AndroidManifest.xml
openCVLibrary430/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCamera2View.java  JavaCameraView.java
